--- a/pom.xml
+++ b/pom.xml
@@ -124,12 +124,21 @@
             <artifactId>spring-data-jpa</artifactId>
             <version>${spring.data}</version>
         </dependency>
-
+        <!--jackson-databind-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
             <version>2.10.0.pr3</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.22</version>
+            <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
